--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,4 +3,20 @@
 @theme {
 	--color-primary: #b9986a;
 	--color-secondary: #1e3a63;
+
+	--breakpoint-xs: 36em;
+	--breakpoint-sm: 48em;
+	--breakpoint-md: 62em;
+	--breakpoint-lg: 75em;
+	--breakpoint-xl: 88em;
+}
+
+@utility no-scrollbar {
+	/* Hide scrollbar for Chrome, Safari and Opera */
+	&::-webkit-scrollbar {
+		display: none;
+	}
+	/* Hide scrollbar for IE, Edge and Firefox */
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
 }
